--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
     { "src": "src/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
+    { "src": "^/$", "dest": "/src/index.html" },
     { "src": "/(.*)", "dest": "/src/$1" }
   ]
 }
