--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,10 @@
     { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
     { "src": "^/$", "dest": "/src/index.html" },
     { "src": "/(.*)", "dest": "/src/$1" }
-  ]
+  ],
+  "functions": {
+    "api/webhook.js": {
+      "maxDuration": 10
+    }
+  }
 }
