--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "src/**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
-    { "src": "^/$", "dest": "/src/index.html" },
-    { "src": "/(.*)", "dest": "/src/$1" }
-  ],
   "functions": {
+    "api/**/*.js": {
+      "runtime": "@vercel/node@3.0.7"
+    },
     "api/webhook.js": {
       "maxDuration": 10
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/", "destination": "/src/index.html" },
+    { "source": "/(.*)", "destination": "/src/$1" }
+  ]
 }
