--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "outputDirectory": "src",
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/", "destination": "/src/index.html" },
